--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-h
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,7 +22,7 @@ h
 
 <body>
     <header>
-        <h1>HTML5 Template</h1>
+        <h1>git hub</h1>
     </header>
 
     <main>
